--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "start": "nodemon ./bin/www.js",
+    "start": "nodemon ./app/bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
